17_02_2025  CORRECIONES COLORES TABLA EN REPOTE CON FILTROS

--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.css
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.css
@@ -62,11 +62,11 @@ table  th  {
   margin-bottom: .5rem;
 }
 
-button {
+.container-matmenu button {
   background-color: rgb(245, 245, 245);
   border-radius: 10px;
 }
 
-button  mat-icon {
+.container-matmenu button  mat-icon {
   color: #20477E;
 }
