--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -1,4 +1,8 @@
+<!-- =================================================================================== -->
+<!-- Header table -->
+<!-- =================================================================================== -->
 <header-table-usuarios />
+
 <!-- =================================================================================== -->
 <!-- Apartado filtros -->
 <!-- =================================================================================== -->
@@ -94,7 +98,7 @@
     <!-- =================================================================================== -->
     <!-- Opciones -->
     <!-- =================================================================================== -->
-    <ng-container matColumnDef="opciones">
+    <ng-container class="menuopciones" matColumnDef="opciones">
       <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
       <td mat-cell *matCellDef="let row">
         <mat-menu #menu="matMenu">
