14_02_2025 RESTA EN EL REPORTE Y CORRECION DE COLORES EN USUARIO ASIGNADO

--- a/src/app/Ui/Modules/configuration/Empresas/page/registro-empresa/registro-empresa.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/page/registro-empresa/registro-empresa.component.html
@@ -51,6 +51,7 @@
                     type="button"
                     mat-fab
                     aria-label="Example icon button with a delete icon"
+                    [disabled]="!Empresa.rucempresa || Empresa.rucempresa.length !== 11"
                   >
                     <mat-icon>search</mat-icon>
                   </button>
