--- a/src/app/Ui/Shared/feactures/asignarUsuario/table-asignar/td-usuario-asignar/td-usuario-asignar.component.html
+++ b/src/app/Ui/Shared/feactures/asignarUsuario/table-asignar/td-usuario-asignar/td-usuario-asignar.component.html
@@ -1,4 +1,4 @@
-<div class="px-6 py-3">
+<!-- <div class="px-6 py-3">
   <div class="flex items-center gap-x-2">
     <img
       class="inline-block size-6 rounded-full"
@@ -9,6 +9,53 @@
       <span class="text-sm text-gray-600 dark:text-neutral-400">{{
         usuario || 'Sin asignar'
       }}</span>
+    </div>
+  </div>
+</div> -->
+
+
+<div class="px-6 py-3">
+  <div class="flex items-center gap-x-2">
+    <div class="grow">
+      @if(usuario) {
+        <span
+class="py-1 px-1.5 inline-flex items-center gap-x-1 text-xs font-medium bg-teal-100 text-teal-800 rounded-full dark:bg-teal-500/10 dark:text-teal-500"
+>
+<svg
+  class="size-2.5"
+  xmlns="http://www.w3.org/2000/svg"
+  width="16"
+  height="16"
+  fill="currentColor"
+  viewBox="0 0 16 16"
+>
+  <path
+    d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
+  />
+</svg>
+{{ usuario }}
+</span>
+
+      } @else {
+        <span
+        class="inline-flex items-center gap-1.5 py-0.5 px-2 rounded-full text-xs font-medium bg-red-100 text-red-800 dark:bg-red-900 dark:text-green-200"
+        >
+        <svg
+          class="size-2.5"
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
+          ></path>
+        </svg>
+        Sin asignar
+        </span>
+        
+      }
     </div>
   </div>
 </div>
