17_02_2025 AGRANDAMIENTO DE FILTRO EMPRESA EN CARGA EMPRESA

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.css
@@ -15,6 +15,11 @@ table th {
   padding-top: .1rem;
   background-color: #F5F5F5;
 }
+
+.ancho_empresas {
+  width: 25rem;
+}
+
 .empresa-view {
   display: flex;
   flex-direction: column;
