--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
@@ -25,10 +25,12 @@
       <div class="modal-body">
         <form (ngSubmit)="guardarCabecera()" [formGroup]="formularioRegistro">
           <div class="px-4 py-1 gap-0 text-center overflow-y-auto">
-            <div class="flex-1">
+
+
+            <div class="flex-1 mt-4">
               <div class="mb-1">
 
-                <label for="empresas" class="form-label">Empresas</label>
+                <label for="empresas" class="w-full text-left form-label">Empresas</label>
                 <select
                   id="empresas"
                   formControlName="rucempresa"
@@ -45,6 +47,33 @@
                   </option>
                   }
                 </select>
+              </div>
+            </div>
+
+
+            <div class="flex-1">
+              <div class="mb-1">
+
+                <label for="empresas" class="w-full text-left form-label">Asignar usuario</label>
+                <select
+                  id="usuarioAsignar"
+                  formControlName="usuarioasignado"
+                  [(ngModel)]="Cabecera.UsuarioAsignado"
+                  class="form-select"
+                  aria-label="Default select example"
+                >
+                <option value="" disabled selected>
+                  Seleccione una Usuario
+                </option>
+                  @for (item of getUsuarios_All; track $index) { @if
+                  (item.estado == '1') {
+                  <option [value]="item.idusuario">
+                    {{ item.idusuario }} - {{ item.nombreusuario }}
+                    {{ item.apellido }}
+                  </option>
+                  } }
+                </select>
+
               </div>
             </div>
 
