--- a/src/app/Ui/Modules/Dashboard/Page/dashboard-inicio/dashboard-inicio.component.html
+++ b/src/app/Ui/Modules/Dashboard/Page/dashboard-inicio/dashboard-inicio.component.html
@@ -1,4 +1,4 @@
 <app-header-dashboard />
+<!-- <section-stats /> -->
 <section-opciones />
-<section-grafica-inventarios-asignados />
 <footer-general />
