17_02_2025 BORRAR BURON NUEVO PRODUCTO

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -114,13 +114,13 @@
           <hr />
           @if (row.estado == '0') { Inventario anulado } @if (row.estado == '2')
           { Inventario culminado } @if (row.estado == '1') {
-          <button-producto
+          <!-- <button-producto
             [idcarga]="row.idcarga"
             [rucempresa]="row.rucempresa"
             (obtenerDetalle)="
               ObtenerDatosAddProductos($event.rucempresa, $event.idcarga)
             "
-          />
+          /> -->
           <button-asignar
             [idcarga]="row.idcarga"
             [rucempresa]="row.rucempresa"
