--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
@@ -165,7 +165,7 @@
               <div class="Nombre_Inventario">
                 <label
                   for="af-submit-project-url"
-                  class="inline-block text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+                  class="inline-block text-sm font-medium text-gray-800 mt-2.5 "
                 >
                   Nombre
                 </label>
@@ -176,7 +176,7 @@
                   id="af-submit-project-url"
                   type="text"
                   [value]="selectedFileName"
-                  class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                  class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                   placeholder="Ingresar nombre"
                 />
                 }@else {
@@ -186,7 +186,7 @@
                   id="af-submit-project-url"
                   type="text"
                   [value]="selectedFileName"
-                  class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                  class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                   placeholder="Ingresar nombre"
                 />
                 }
