17_02_2025 ADD STATS DASHBOARD

--- a/src/app/Ui/Modules/Dashboard/Components/section-stats/section-stats.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/section-stats/section-stats.component.html
@@ -12,15 +12,13 @@
         <div class="grow">
           <div class="flex items-center gap-x-2">
             <p class="text-xs uppercase tracking-wide text-gray-500">
-              Total suarios
+              Total usuarios
             </p>
-
           </div>
           <div class="mt-1 flex items-center gap-x-2">
             <h3 class="text-xl sm:text-2xl font-medium text-gray-800">
               {{DatosUsuarios}}
             </h3>
-
           </div>
         </div>
       </div>
@@ -37,12 +35,12 @@
         <div class="grow">
           <div class="flex items-center gap-x-2">
             <p class="text-xs uppercase tracking-wide text-gray-500">
-              Sessions
+              Total Inventarios
             </p>
           </div>
           <div class="mt-1 flex items-center gap-x-2">
             <h3 class="text-xl font-medium text-gray-800">
-              29.4%
+              {{datosInventarioslista}}
             </h3>
           </div>
         </div>
@@ -60,19 +58,13 @@
         <div class="grow">
           <div class="flex items-center gap-x-2">
             <p class="text-xs uppercase tracking-wide text-gray-500">
-              Avg. Click Rate
+              Inventarios Asignados
             </p>
           </div>
           <div class="mt-1 flex items-center gap-x-2">
             <h3 class="text-xl sm:text-2xl font-medium text-gray-800">
-              56.8%
+              {{datosInventariosAsignados}}
             </h3>
-            <span class="inline-flex items-center gap-x-1 py-0.5 px-2 rounded-full bg-red-100 text-red-900">
-              <svg class="inline-block size-4 self-center" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 17 13.5 8.5 8.5 13.5 2 7"/><polyline points="16 17 22 17 22 11"/></svg>
-              <span class="inline-block text-xs font-medium">
-                1.7%
-              </span>
-            </span>
           </div>
         </div>
       </div>
@@ -89,20 +81,12 @@
         <div class="grow">
           <div class="flex items-center gap-x-2">
             <p class="text-xs uppercase tracking-wide text-gray-500">
-              Pageviews
+              Inventarios sin asignar
             </p>
-            <div class="hs-tooltip">
-              <div class="hs-tooltip-toggle">
-                <svg class="shrink-0 size-4 text-gray-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
-                <span class="hs-tooltip-content hs-tooltip-shown:opacity-100 hs-tooltip-shown:visible opacity-0 transition-opacity inline-block absolute invisible z-10 py-1 px-2 bg-gray-900 text-xs font-medium text-white rounded shadow-sm" role="tooltip">
-                  The average pageviews
-                </span>
-              </div>
-            </div>
           </div>
           <div class="mt-1 flex items-center gap-x-2">
             <h3 class="text-xl font-medium text-gray-800">
-              92,913
+             {{datosInventariosNoAsignados}}
             </h3>
           </div>
         </div>
