18_02_2025 ADD DIAGRAMAS EN EL DASHBOARD

--- a/src/app/Ui/Modules/Dashboard/Components/section-stats/section-stats.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/section-stats/section-stats.component.html
@@ -1,99 +1,32 @@
-<!-- Card Section -->
+
+<!-- Features -->
 <div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
   <!-- Grid -->
-  <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
-    <!-- Card -->
-    <div class="flex flex-col bg-white border shadow-sm rounded-xl">
-      <div class="p-4 md:p-5 flex gap-x-4">
-        <div class="shrink-0 flex justify-center items-center size-[46px] bg-gray-100 rounded-lg">
-          <svg class="shrink-0 size-5 text-gray-600" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
-        </div>
-
-        <div class="grow">
-          <div class="flex items-center gap-x-2">
-            <p class="text-xs uppercase tracking-wide text-gray-500">
-              Total usuarios
-            </p>
-          </div>
-          <div class="mt-1 flex items-center gap-x-2">
-            <h3 class="text-xl sm:text-2xl font-medium text-gray-800">
-              {{DatosUsuarios}}
-            </h3>
-          </div>
-        </div>
-      </div>
+  <div class="grid gap-6 grid-cols-2 sm:gap-12 lg:grid-cols-3 lg:gap-8">
+    <!-- Stats -->
+    <div>
+      <h4 class="text-lg sm:text-xl font-semibold text-gray-800">Total usuarios</h4>
+      <p class="mt-2 sm:mt-3 text-4xl sm:text-6xl font-bold text-blue-600">{{DatosUsuarios}}</p>
+      <p class="mt-1 text-gray-500">En registro</p>
     </div>
-    <!-- End Card -->
+    <!-- End Stats -->
 
-    <!-- Card -->
-    <div class="flex flex-col bg-white border shadow-sm rounded-xl">
-      <div class="p-4 md:p-5 flex gap-x-4">
-        <div class="shrink-0 flex justify-center items-center size-[46px] bg-gray-100 rounded-lg">
-          <svg class="shrink-0 size-5 text-gray-600" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 22h14"/><path d="M5 2h14"/><path d="M17 22v-4.172a2 2 0 0 0-.586-1.414L12 12l-4.414 4.414A2 2 0 0 0 7 17.828V22"/><path d="M7 2v4.172a2 2 0 0 0 .586 1.414L12 12l4.414-4.414A2 2 0 0 0 17 6.172V2"/></svg>
-        </div>
-
-        <div class="grow">
-          <div class="flex items-center gap-x-2">
-            <p class="text-xs uppercase tracking-wide text-gray-500">
-              Total Inventarios
-            </p>
-          </div>
-          <div class="mt-1 flex items-center gap-x-2">
-            <h3 class="text-xl font-medium text-gray-800">
-              {{datosInventarioslista}}
-            </h3>
-          </div>
-        </div>
-      </div>
+    <!-- Stats -->
+    <div>
+      <h4 class="text-lg sm:text-xl font-semibold text-gray-800">Total inventarios</h4>
+      <p class="mt-2 sm:mt-3 text-4xl sm:text-6xl font-bold text-blue-600">{{datosInventarioslista}}</p>
+      <p class="mt-1 text-gray-500">Registrados para trabajarse</p>
     </div>
-    <!-- End Card -->
+    <!-- End Stats -->
 
-    <!-- Card -->
-    <div class="flex flex-col bg-white border shadow-sm rounded-xl">
-      <div class="p-4 md:p-5 flex gap-x-4">
-        <div class="shrink-0 flex justify-center items-center size-[46px] bg-gray-100 rounded-lg">
-          <svg class="shrink-0 size-5 text-gray-600" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h6"/><path d="m12 12 4 10 1.7-4.3L22 16Z"/></svg>
-        </div>
-
-        <div class="grow">
-          <div class="flex items-center gap-x-2">
-            <p class="text-xs uppercase tracking-wide text-gray-500">
-              Inventarios Asignados
-            </p>
-          </div>
-          <div class="mt-1 flex items-center gap-x-2">
-            <h3 class="text-xl sm:text-2xl font-medium text-gray-800">
-              {{datosInventariosAsignados}}
-            </h3>
-          </div>
-        </div>
-      </div>
+    <!-- Stats -->
+    <div>
+      <h4 class="text-lg sm:text-xl font-semibold text-gray-800">Total inventarios asignados</h4>
+      <p class="mt-2 sm:mt-3 text-4xl sm:text-6xl font-bold text-blue-600">{{datosInventariosAsignados}}</p>
+      <p class="mt-1 text-gray-500">Asignados a un usuario en específico</p>
     </div>
-    <!-- End Card -->
-
-    <!-- Card -->
-    <div class="flex flex-col bg-white border shadow-sm rounded-xl">
-      <div class="p-4 md:p-5 flex gap-x-4">
-        <div class="shrink-0 flex justify-center items-center size-[46px] bg-gray-100 rounded-lg">
-          <svg class="shrink-0 size-5 text-gray-600" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12s2.545-5 7-5c4.454 0 7 5 7 5s-2.546 5-7 5c-4.455 0-7-5-7-5z"/><path d="M12 13a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/><path d="M21 17v2a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-2"/><path d="M21 7V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v2"/></svg>
-        </div>
-
-        <div class="grow">
-          <div class="flex items-center gap-x-2">
-            <p class="text-xs uppercase tracking-wide text-gray-500">
-              Inventarios sin asignar
-            </p>
-          </div>
-          <div class="mt-1 flex items-center gap-x-2">
-            <h3 class="text-xl font-medium text-gray-800">
-             {{datosInventariosNoAsignados}}
-            </h3>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- End Card -->
+    <!-- End Stats -->
   </div>
   <!-- End Grid -->
 </div>
-<!-- End Card Section -->
+<!-- End Features -->
