18_02_2025 STATS MODIFICADOS Y CORREGIDOS

--- a/src/app/Ui/Modules/Dashboard/Components/section-stats/section-stats.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/section-stats/section-stats.component.html
@@ -5,9 +5,9 @@
   <div class="grid gap-6 grid-cols-2 sm:gap-12 lg:grid-cols-3 lg:gap-8">
     <!-- Stats -->
     <div>
-      <h4 class="text-lg sm:text-xl font-semibold text-gray-800">Total usuarios</h4>
-      <p class="mt-2 sm:mt-3 text-4xl sm:text-6xl font-bold text-blue-600">{{DatosUsuarios}}</p>
-      <p class="mt-1 text-gray-500">En registro</p>
+      <h4 class="text-lg sm:text-xl font-semibold text-gray-800">Total Inventarios trabajados</h4>
+      <p class="mt-2 sm:mt-3 text-4xl sm:text-6xl font-bold text-blue-600">{{datosInventariosTrabajados}}</p>
+      <p class="mt-1 text-gray-500">Procesados</p>
     </div>
     <!-- End Stats -->
 
