--- a/src/app/Ui/Modules/Dashboard/Components/section-opciones/section-opciones.component.css
+++ b/src/app/Ui/Modules/Dashboard/Components/section-opciones/section-opciones.component.css
@@ -1,3 +1,19 @@
+.container_opciones h2 {
+  width: 100%;
+  text-align: center;
+  font-size: 2rem;
+  color: #20477E;
+  margin-bottom: 2rem;
+}
+
+.container_opciones h2 span{
+  width: 100%;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 700;
+  color: #00D1AE;
+}
+
 .container_opciones {
   width: 100%;
   height: 100%;
