--- a/src/app/Ui/Modules/Dashboard/Components/section-opciones/section-opciones.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/section-opciones/section-opciones.component.html
@@ -1,4 +1,5 @@
 <div class="container_opciones  ">
+  <h2>OPCIONES <span>SISTEMA</span></h2>
   <ul>
     @for (item of mainMenu.accessLink; track $index) {
       <target-opcion [imagen]="item.imagen" [name]="item.name" [route]="item.route"  />
