--- a/src/app/Ui/Modules/Dashboard/Components/section-cantidadregistro-inventarios/section-cantidadregistro-inventarios.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/section-cantidadregistro-inventarios/section-cantidadregistro-inventarios.component.html
@@ -2,13 +2,13 @@
   <h2>DIAGR<span>AMAS</span> </h2>
   <div class="grid sm:grid-cols-2 lg:grid-cols-2 gap-4 sm:gap-6">
     <div class="flex flex-col bg-white border shadow-sm rounded-xl">
-      <div class="p-4 w-full md:p-5 flex gap-x-4">
+      <div class="p-4 w-full md:p-5 ">
         <canvas class="w-full" #barChart_inventario></canvas>
       </div>
     </div>
 
     <div class="flex flex-col bg-white border shadow-sm rounded-xl">
-      <div class="p-4 md:p-5 flex gap-x-4">
+      <div class="p-4 md:p-5 ">
         <canvas class="w-full" #barChart_usuario></canvas>
       </div>
     </div>
